--- a/src/components/Results/Result.css
+++ b/src/components/Results/Result.css
@@ -34,6 +34,7 @@ li {
   font-weight: bold;
   margin-left: 5px;
   font-size: 20px;
+  display: inline-block;
 }
 .synonyms_box {
   margin-top: 50px;
@@ -58,6 +59,31 @@ hr {
 .new-window {
   margin-left: 8px;
 }
+.processing {
+  text-align: center;
+  margin-top: 100px;
+  font-size: 24px;
+}
+
+.error {
+  color: rgb(241, 113, 113);
+}
+
+@keyframes intermittent {
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0.5;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+.intermittent-text {
+  animation: intermittent 0.5s infinite;
+}
 
 @media (max-width: 768px) {
   .title {
@@ -77,5 +103,11 @@ hr {
   }
   .phonetic {
     font-size: 18px;
+  }
+  li {
+    font-size: 16px;
+  }
+  .source {
+    display: flex;
   }
 }
