--- a/src/components/SearchBar/searchBar.css
+++ b/src/components/SearchBar/searchBar.css
@@ -11,7 +11,11 @@ input[type="text"] {
   background-repeat: no-repeat;
   background-position: 97% 50%;
 }
+input[type="text"]:focus {
+  outline: none;
+}
 h1 {
   font-size: 48px;
   text-align: center;
+  margin-bottom: 0;
 }
